[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/back.png" type="Texture" id=1]
[ext_resource path="res://sprites/radar_icons.png" type="Texture" id=2]
[ext_resource path="res://sprites/backgrounds/console_center.png" type="Texture" id=3]
[ext_resource path="res://objects/radar/Radar.gd" type="Script" id=4]
[ext_resource path="res://fonts/computer.tres" type="DynamicFont" id=5]
[ext_resource path="res://objects/radar/ShieldIndicator.tscn" type="PackedScene" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 32, 16 )

[node name="Radar" type="Control"]
material = SubResource( 1 )
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_NoSignal" type="Label" parent="."]
modulate = Color( 0.407843, 0.498039, 0.541176, 1 )
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -14.0
margin_right = 36.0
custom_fonts/font = ExtResource( 5 )
text = "NO SIGNAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldIndicator" parent="." instance=ExtResource( 6 )]
margin_left = 240.0
margin_top = 16.0
margin_right = -80.0
margin_bottom = -164.0

[node name="Button_ZoomOut" type="TextureButton" parent="."]
material = SubResource( 3 )
margin_left = 16.0
margin_top = 10.0
margin_right = 32.0
margin_bottom = 26.0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_ZoomIn" type="TextureButton" parent="."]
material = SubResource( 3 )
margin_left = 34.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 26.0
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Fire" type="TextureButton" parent="."]
material = SubResource( 3 )
margin_left = 16.0
margin_top = 140.0
margin_right = 48.0
margin_bottom = 156.0
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 11 )
texture_hover = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Back" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -18.0
margin_right = 16.0
margin_bottom = -2.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Update" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="shield_toggled" from="ShieldIndicator" to="." method="_shield_toggled"]
[connection signal="pressed" from="Button_ZoomOut" to="." method="_zoom_out"]
[connection signal="pressed" from="Button_ZoomIn" to="." method="_zoom_in"]
[connection signal="pressed" from="Button_Fire" to="." method="_fire_missile"]
[connection signal="pressed" from="Button_Back" to="." method="_on_Button_Back_pressed"]
[connection signal="timeout" from="Timer_Update" to="." method="update_radar"]
